--- a/src/app/register/register.component.scss
+++ b/src/app/register/register.component.scss
@@ -1,13 +1,7 @@
 @import "../../scss/colors";
 @import "../../scss/mixins";
 
-.outer-container {
-  @include darken_style();
-  width: 30rem;
-  height: 68rem;
-}
-
-.modal-container {
+.container {
   padding: 40px;
   .title {
     font-size: 4em;
@@ -35,4 +29,15 @@
     height: calc(100%);
     overflow: auto;
   }
+}
+
+input[readonly]
+{
+    color:$color-initial;
+}
+
+.button {
+  margin-top: 30px;
+  float: right;
+  margin-right: 1em;
 }
