--- a/src/scss/material.scss
+++ b/src/scss/material.scss
@@ -36,9 +36,42 @@ $mat-blueish: (
   )
 );
 
+$mat-reddish: (
+  50: lighten($color-tertiary, 50%),
+  100: lighten($color-tertiary, 40%),
+  200: lighten($color-tertiary, 30%),
+  300: lighten($color-tertiary, 20%),
+  400: lighten($color-tertiary, 10%),
+  500: $color-tertiary,
+  600: darken($color-tertiary, 10%),
+  700: darken($color-tertiary, 20%),
+  800: darken($color-tertiary, 30%),
+  900: darken($color-tertiary, 40%),
+  A100: lighten($color-tertiary, 25%),
+  A200: lighten($color-tertiary, 20%),
+  A400: lighten($color-tertiary, 15%),
+  A700: lighten($color-tertiary, 10%),
+  contrast: (
+    50: $dark-primary-text,
+    100: $dark-primary-text,
+    200: $dark-primary-text,
+    300: $dark-primary-text,
+    400: $dark-primary-text,
+    500: $light-primary-text,
+    600: $light-primary-text,
+    700: $light-primary-text,
+    800: $light-primary-text,
+    900: $light-primary-text,
+    A100: $dark-primary-text,
+    A200: $light-primary-text,
+    A400: $light-primary-text,
+    A700: $light-primary-text,
+  )
+);
+
 $primary: mat-palette($mat-blueish, 500);
 $accent:  mat-palette($mat-blueish, 500);
-$warn:    mat-palette($mat-green, 500);
+$warn:    mat-palette($mat-reddish, 500);
 
 $theme: mat-dark-theme($primary, $accent, $warn);
 
