--- a/src/app/user/user.component.scss
+++ b/src/app/user/user.component.scss
@@ -1,24 +1,27 @@
 @import "../../scss/colors";
 @import "../../scss/boxing";
+@import "../../scss/mixins";
 
-.mat-divider.mat-divider-vertical {
-  border-right-width: 2px;
-  padding: 10px;
-  margin-right: 10px;
-  border-color: $color-dark;
+
+.container {
+  padding-bottom: 5em;
 }
 
-.separator {
-  border-width: 2px;
-  margin: 2em 0em 2em -20px;
-  width: calc(20em + 20px);
-  border-color: $color-dark;
+.mat-divider.mat-divider-vertical {
+  border: none;
+  padding: 10px;
+  margin-right: 10px;
+}
+
+.imageColumn {
+  min-width: 200px;
 }
 
 .infos {
   mat-form-field {
     width: 20em;
     display: block;
+    margin-bottom: 2.3em;
   }
 }
 
@@ -40,6 +43,10 @@ img {
   width: 100%;
   height: 100%;
   object-fit: fill;
+}
+
+.box {
+  @include box_shadow(7px, 1px, black);
 }
 
 .profile-file {
