--- a/src/app/event/event-list.component.html
+++ b/src/app/event/event-list.component.html
@@ -5,6 +5,6 @@
       <h1>New</h1>
     </a>
   </div>
-  <app-event-preview *ngFor="let event of events" [event]="event"></app-event-preview>
+  <app-event-preview *ngFor="let event of   getEvents()" [event]="event"></app-event-preview>
   <div *ngFor="let n of count(10)" class="padder"></div>
 </div>
