--- a/src/app/event/event-edit.component.html
+++ b/src/app/event/event-edit.component.html
@@ -1,18 +1,25 @@
 <div class="modal-container">
-  <form (submit)="save()">
+  <form [formGroup]="form" (submit)="save()">
     <h1 class="title">Edit event</h1>
     <mat-form-field>
-      <input matInput type="text" [(ngModel)]="event.title" placeholder="Title" name="title">
+      <input matInput type="text" [(ngModel)]="event.title" placeholder="Title" formControlName="title">
+      <mat-error *ngIf="!form.controls.title.valid && form.controls.title.dirty">
+        Title is required with a length between 3 and 50 characters.
+      </mat-error>
     </mat-form-field>
     <mat-form-field>
-      <input show-todays-date matInput [matDatepicker]="picker" [(ngModel)]="event.date" placeholder="Event date" name="date">
+      <input show-todays-date matInput [matDatepicker]="picker" [(ngModel)]="event.date"
+        placeholder="Event date" formControlName="date">
       <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
       <mat-datepicker #picker></mat-datepicker>
     </mat-form-field>
     <mat-form-field>
-      <textarea matInput placeholder="Description" [(ngModel)]="event.description" name="description" matTextareaAutosize matAutosizeMinRows="2"
-        matAutosizeMaxRows="2"></textarea>
+      <textarea matInput placeholder="Description" [(ngModel)]="event.description" formControlName="description"
+        matTextareaAutosize matAutosizeMinRows="2" matAutosizeMaxRows="2"></textarea>
+      <mat-error *ngIf="!form.controls.description.valid && form.controls.description.dirty">
+        Description is required with a length between 10 and 1000 characters.
+      </mat-error>
     </mat-form-field>
-    <button type="submit">Save</button>
+    <button [disabled]="!form.valid" type="submit">Save</button>
   </form>
 </div>
