--- a/src/app/event/event-view.component.html
+++ b/src/app/event/event-view.component.html
@@ -18,7 +18,7 @@
     </a>
   </div>
   <div class="preview-container" *ngFor="let preview of imagePreviews; let i = index"
-    (click)="viewImage(preview)">
+    (click)="viewImage(i)">
     <img [src]="getPreview(i)" (load)="loaded(i)" [hidden]="!isLoaded(i)" />
     <div class="loader" *ngIf="!isLoaded(i)">
       <fa [name]="'image'" [size]="3"></fa>
