--- a/src/app/event/event-preview.component.html
+++ b/src/app/event/event-preview.component.html
@@ -8,7 +8,7 @@
       </div>
     </div>
     <div class="column column-50">
-      <h1>{{event.title}}</h1>
+      <h1>{{event.title | limit : 25}}</h1>
       <h5>{{event.date | date:'yyyy.MM.dd'}}</h5>
       <p>{{event.description | limit : 80}}</p>
     </div>
