--- a/src/app/event/event-view.component.html
+++ b/src/app/event/event-view.component.html
@@ -19,7 +19,7 @@
   </div>
   <div class="preview-container" *ngFor="let preview of imagePreviews; let i = index"
     (click)="viewImage(i)">
-    <img [src]="getPreview(i)" (load)="loaded(i)" [hidden]="!isLoaded(i)" />
+    <img [src]="preview.image | loadImage" (load)="loaded(i)" [hidden]="!isLoaded(i)" />
     <div class="loader" *ngIf="!isLoaded(i)">
       <fa [name]="'image'" [size]="3"></fa>
     </div>
