--- a/src/app/user/user-list.component.html
+++ b/src/app/user/user-list.component.html
@@ -15,7 +15,7 @@
     </tr>
     <tr *ngFor="let user of users">
       <td>
-        <img class="profile-picture" [src]="user?.picture">
+        <img class="profile-picture" [src]="user?.picture | loadImage">
       </td>
       <td>{{user?.nickname}}</td>
       <td>{{user?.email}}</td>
