--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -4,7 +4,8 @@
       <div class="column column-20 column-offset-10 imageColumn">
         <div class='box'>
           <div class='content'>
-            <img [src]="getPicture()" />
+            <img *ngIf="picture" [src]="picture" />
+            <img *ngIf="!picture" [src]="getPicture() | loadImage" />
             <a class="profile-file">
               <fa [name]="'folder-open'" [size]="2"></fa>
               <input type="file" (change)="readUrl($event)" (ngModel)="picture" [ngModelOptions]="{standalone: true}"
