--- a/src/app/image/image-view.component.scss
+++ b/src/app/image/image-view.component.scss
@@ -41,6 +41,8 @@
   img {
     width: 100%;
     height: 100%;
-    object-fit: scale-down;
+    margin: 0px;
+    padding: 0px;
+    object-fit: contain;
   }
 }
