--- a/src/app/image/image-upload.component.scss
+++ b/src/app/image/image-upload.component.scss
@@ -1,5 +1,7 @@
 @import "../../scss/mixins";
 @import "../../scss/colors";
+@import "../../scss/boxing";
+@import "../../scss/spinner";
 
 .container {
   padding: 30px 60px 30px 60px;
@@ -19,12 +21,32 @@
   margin: 0.2em;
   
   .image-remove {
-    margin-left: 1em;
+    float: right;
   }
 
   mat-chip {
     @include darken_style();
     @include box_shadow(7px, 1px, black);
+  }
+
+  .box {
+    width: 150px;
+    height: 150px;
+    margin-top: 1.5em;
+  }
+
+  img {
+    width: 100%;
+    height: 100%;
+    object-fit: scale-down;
+  }
+
+  .loader {
+    padding: 45px;
+  }
+
+  .image-name {
+    text-align: center;
   }
 }
 
