--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,7 @@
 @import "./scss/colors";
 @import "./scss/material";
 @import "./scss/mixins";
+@import "./scss/snackbar";
 @import "../node_modules/milligram/src/milligram";
 @import url(https://fonts.googleapis.com/css?family=Indie+Flower);
 @import url(https://fonts.googleapis.com/css?family=Raleway);
