--- a/src/app/event/event-view.component.scss
+++ b/src/app/event/event-view.component.scss
@@ -100,3 +100,30 @@ h5 {
     align-items:center;
   }
 }
+
+.author-box {
+  @include darken_style();
+  display: inline;
+  padding: 11px 15px 8px 4px;
+  border-radius: 23px;
+  cursor: pointer;
+
+  h5 {
+    display: inline;
+    margin-left: 5px;
+  }
+  .author-picture {
+    width: 30px;
+    height: 30px;
+    vertical-align: bottom;
+    border-radius: 50%;
+    margin: 0px;
+  }
+
+  &:hover {
+    background-color: rgba(darken($color-secondary, 25%),0.5);
+  }
+  &:active {
+    background-color: rgba(darken($color-secondary, 27%),0.5);
+  }
+}
