--- a/src/scss/mixins.scss
+++ b/src/scss/mixins.scss
@@ -1,15 +1,15 @@
 @import "colors";
 
 @mixin box_shadow($blur, $spread, $color) {
-  -webkit-box-shadow: 0px 0px $blur $spread rgba($color,.8);
-  -moz-box-shadow: 0px 0px $blur $spread rgba($color,.8);
-  box-shadow: 0px 0px $blur $spread rgba($color,.8);
+  -webkit-box-shadow: 0px 0px $blur $spread $color;
+  -moz-box-shadow: 0px 0px $blur $spread $color;
+  box-shadow: 0px 0px $blur $spread $color;
 }
 
 @mixin double_shadow($blur, $spread, $color, $blur2, $spread2, $color2) {
-  -webkit-box-shadow: inset 0px 0px $blur $spread rgba($color,.8), 0px 0px $blur2 $spread2 rgba($color2,.8);
-  -moz-box-shadow: inset 0px 0px $blur $spread rgba($color,.8), 0px 0px $blur2 $spread2 rgba($color2,.8);
-  box-shadow: inset 0px 0px $blur $spread rgba($color,.8), 0px 0px $blur2 $spread2 rgba($color2,.8);
+  -webkit-box-shadow: inset 0px 0px $blur $spread $color, 0px 0px $blur2 $spread2 $color2;
+  -moz-box-shadow: inset 0px 0px $blur $spread $color, 0px 0px $blur2 $spread2 $color2;
+  box-shadow: inset 0px 0px $blur $spread $color, 0px 0px $blur2 $spread2 $color2;
 }
 
 @mixin unselectable() {
