--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,22 +1,48 @@
-<div class="scroller" #scroller>
-  <div class="page promo-container">
+<div class="no-scroll" [hidden]="!scrolling"></div>
+<div class="scroller" (scroll)="onScroll($event)">
+  <div id="promo" class="page promo-container">
     <div class="motto-container">
       <object class="logo" type="image/svg+xml" data="./assets/img/logo.svg">
         ooOo
       </object>
       <h1>Kéro</h1>
-      <h2 [ngx-scroll-to]="'meet'" [ngx-scroll-to-easing]="ngxScrollToEasing" class="meet">Meet.</h2>
-      <h2 [ngx-scroll-to]="'share'" class="share">Share.</h2>
-      <h2 [ngx-scroll-to]="'build'" class="build">Build.</h2>
+      <h2 class="meet">Meet.</h2>
+      <h2 class="share">Share.</h2>
+      <h2 class="build">Build.</h2>
+      <a class="down-arrow" (click)="scrollTo(1)">
+        <fa [name]="'chevron-down'" [size]="4"></fa>
+      </a>
     </div>
   </div>
-  <div id="meet" class="page meet-container">
-    <h2>Meet.</h2>
+  <div id="meet" class="page meet-container presenting-page">
+    <h1>Meet.</h1>
+    <div class="container">
+      <h2>
+        Join us and meet new people. Show a bit of yourself, and you will see a bit of us.
+        Let yourself go a bit, and we will get loose. If a mind may contain a whole
+        world, a community makes up an entire universe.
+      </h2>
+    </div>
   </div>
-  <div id="share" class="page share-container">
-    <h2 class="accent">Share.</h2>
+  <div id="share" class="page share-container presenting-page">
+    <h1>Share.</h1>
+    <div class="container">
+      <h2>
+        Hear our stories and have a laugh. Maybe tell us the story from the other day. We're
+        sure you too had some nights that you will not forget soon... Share your
+        visions and we will figure out how to make this basket full of ingredients
+        into a delicious dish. Trips, places, activities, you name it!
+      </h2>
+    </div>
   </div>
-  <div id="build" class="page build-container">
-    <h2>Build.</h2>
+  <div id="build" class="page build-container presenting-page">
+    <h1>Build.</h1>
+    <div class="container">
+      <h2>
+        Brick by brick, member by member, experience by experience. A temple built on rock-solid
+        foundation carved by time and bound by friendship. This is what we build.
+        A haven for all those who wish to be part of it.
+      </h2>
+    </div>
   </div>
 </div>
