--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -13,21 +13,26 @@ $logo-drop-color: rgba($color-dark, 0.92);
 }
 
 .motto-container {
+  opacity: 0;
+  animation: appear 2s forwards;
+  animation-delay: 2s;
   margin-top: 5%;
   display: inline-block;
   background-color: $logo-drop-color;
   @include box_shadow(22vw, 25vw, $logo-drop-color);
   h1 {
-    font-size: 8em;
-    font-family: 'Indie Flower', cursive;
-    font-weight: bold;
+    opacity: 0;
+    animation: appear 2s forwards;
+    animation-delay: 3.5s;
   }
   h2 {
+    opacity: 0;
+    animation: appear 1s forwards;
+    animation-delay: 4s;
     font-size: 3em;
     font-weight: bold;
     display: inline;
     padding: 0.1em;
-    cursor: pointer;
   }
   .meet {
     color: $color-secondary;
@@ -39,10 +44,32 @@ $logo-drop-color: rgba($color-dark, 0.92);
     color: $color-tertiary;
   }
   .logo {
+    opacity: 0;
+    animation: appear 2s forwards;
+    animation-delay: 3.5s;
     width: 20vw;
     height: auto;
     margin-right: 5%;
   }
+  .down-arrow {
+    opacity: 0;
+    animation: appear 3s forwards, bounce 2s infinite;
+    animation-delay: 8s, 8s;
+    position: absolute;
+    bottom: 1em;
+    left: calc(50vw - 2em);
+  }
+}
+
+@keyframes appear {
+  0%   {opacity: 0;}
+  100% {opacity: 1;}
+}
+
+@keyframes bounce {
+  0%   {bottom: 1em;}
+  50%   {bottom: 2em;}
+  100% {bottom: 1em;}
 }
 
 .meet-container {
@@ -57,23 +84,24 @@ $logo-drop-color: rgba($color-dark, 0.92);
   background-color: rgba(darken($color-tertiary, 10%), 0.8);
 }
 
+.presenting-page {
+  h1 {
+    margin-top: 16vh;
+  }
+}
+
 .scroller {
   width: calc(100vw + 26px);
   height: 100vh;
-  // white-space: nowrap;
-  overflow-y: hidden;
   overflow: auto;
-
-  // scroll-snap-type: mandatory;
-  // scroll-snap-destination: 0% 100%;
-  // scroll-snap-points-y: repeat(100%);
-
-  // -webkit-scroll-snap-type: mandatory;
-  // -webkit-scroll-snap-destination: 0% 100%;
-  // -webkit-scroll-snap-points-y: repeat(100%);
 }
 
 .page {
+  h1 {
+    font-size: 8em;
+    font-family: 'Indie Flower', cursive;
+    font-weight: bold;
+  }
   text-align: center;
   vertical-align: center;
   width: 100vw;
@@ -81,5 +109,11 @@ $logo-drop-color: rgba($color-dark, 0.92);
   position: relative;
   overflow: hidden;
   transition: all 0.3s ease-out;
-  // scroll-snap-align: start;
+}
+
+.no-scroll {
+  z-index: 1;
+  position: fixed;
+  width: 100%;
+  height: 100%;
 }
