--- a/src/app/image/image-view.component.scss
+++ b/src/app/image/image-view.component.scss
@@ -7,7 +7,7 @@
   width: 100%;
   height: 100%;
   position: fixed;
-  z-index: 2;
+  z-index: 3;
 }
 
 .exit-button {
@@ -57,4 +57,12 @@
   display: flex;
   justify-content:center;
   align-items:center;
+}
+
+.fade-in {
+  @include appear(0.2s, 0s);
+}
+
+.fade-out {
+  @include dissapear(0.2s, 0s);
 }
